# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.196 2012/04/01 19:19:40 floppym Exp $

  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> subversion.eclass:
  ESCM_OFFLINE -> EVCS_OFFLINE. Bug 410471.

  30 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  python-distutils-ng.eclass:
  Fix two small issues, spotted by Sławomir Nizio
  <slawomir.nizio@sabayon.org>.

  29 Mar 2012; Patrick Lauer <patrick@gentoo.org> apache-2.eclass:
  Sanitizing directory permissions #398899

  29 Mar 2012; Marien Zwart <marienz@gentoo.org> python.eclass:
  Add more versions of pypy to the hardcoded mapping in python.eclass.

  28 Mar 2012; Marien Zwart <marienz@gentoo.org> python-distutils-ng.eclass:
  Try to unbreak dependency generation.

  26 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  python-distutils-ng.eclass:
  _python-distutils-ng_generate_depend was used only in one place, inline it.

  26 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  python-distutils-ng.eclass:
  Avoid ${impl::-3} parameter expansion, this is not supported by older bash
  and caused issues with cache generation.

  26 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  python-distutils-ng.eclass:
  Small fixes: use +=, cleanup used variables, white space.

  26 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  python-distutils-ng.eclass:
  Include only valid values in REQUIRED_USE.

  26 Mar 2012; Justin Lecher <jlec@gentoo.org> python-distutils-ng.eclass:
  Add missing space to new python.eclass

  25 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  +python-distutils-ng.eclass:
  Add python-distutils-ng.eclass: new eclass for installing Python, distutils
  based packages.

  25 Mar 2012; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-python-common.eclass:
  Replace old py-compile trick by the one from python eclass.
