@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.196 2012/04/01 19:19:40 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.197 2012/04/02 17:48:06 slyfox Exp $
+
+  02 Apr 2012; Sergei Trofimovich <slyfox@gentoo.org> darcs.eclass:
+  Switch from ESCM_OFFLINE var to EVCS_OFFLINE (bug #410467 by Ulrich Müller).
+  Don't skip _darcs/ when checkout to $WORKDIR. Add 'rsync' to DEPENDS.
 
   01 Apr 2012; Mike Gilbert <floppym@gentoo.org> subversion.eclass:
   ESCM_OFFLINE -> EVCS_OFFLINE. Bug 410471.
